@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<p>SVG-edit @ <a href="http://svg-edit.googlecode.com/">http://svg-edit.googlecode.com/</a></p>
+<p>SVG-edit @ <a href="http://code.google.com/p/svg-edit/">http://code.google.com/p/svg-edit/</a></p>
 <div id="svg_editor">
 
 <div id="color_picker" class="tools_flyout"></div>
@@ -29,7 +29,7 @@
 <div id="tool_fhellipse" title="Free-Hand Ellipse"></div>
 </div>
 
-<div id="tools">
+<div id="tools" class="tools_panel">
 
 <div>
 <img class="tool_button" id="tool_select" src="images/select.png" title="Select Tool" alt="Select"/><br/>
@@ -37,6 +37,7 @@
 <img class="tool_button" id="tool_line" src="images/line.png" title="Line Tool" alt="Line"/><br/>
 <img class="tool_button" id="tools_rect_show" src="images/square.png" title="Square/Rect Tool" alt="Square"/><br/>
 <img class="tool_button" id="tools_ellipse_show" src="images/circle.png" title="Circle/Ellipse Tool" alt="Circle"/><br/>
+<img class="tool_button" id="tool_text" src="images/text.png" title="Text Tool" alt="Text"/><br/>
 <img class="tool_button" id="tool_delete" src="images/delete.png" title="Delete Element" alt="Delete"/><hr/>
 <img class="tool_button" id="tool_clear" src="images/clear.png" title="New Image" alt="Clear" /><br/>
 <img class="tool_button" id="tool_submit" src="images/submit.png" title="Save Image" alt="Source"/><br/>
@@ -96,7 +97,7 @@
 </select>
 </div>
 <hr/>
-<div>
+<div>opacity<br/>
 <select id="group_opacity" title="Change group opacity">
 <option selected="selected" value="1">100 %</option>
 <option value="0.9">90 %</option>
@@ -122,6 +123,33 @@
 
 <div id="palette_holder">
 <div id="palette" title="Left-click to change fill color, right-click to change stroke color">
+</div>
+</div>
+
+<div id="text_panel" class="tools_panel">
+<div>text
+<select id="font_family" class="text_tool" title="Change Font Family" disabled>
+<option selected="selected" value="serif">serif</option>
+<option selected="selected" value="sans-serif">sans-serif</option>
+<option selected="selected" value="cursive">cursive</option>
+<option selected="selected" value="fantasy">fantasy</option>
+<option selected="selected" value="monospace">monospace</option>
+</select>
+<select id="font_size" class="text_tool" title="Change Font Size" disabled>
+<option selected="selected" value="6pt">6pt</option>
+<option selected="selected" value="8pt">8pt</option>
+<option selected="selected" value="10pt">10pt</option>
+<option selected="selected" value="12pt">12pt</option>
+<option selected="selected" value="14pt">14pt</option>
+<option selected="selected" value="16pt">16pt</option>
+<option selected="selected" value="24pt">24pt</option>
+<option selected="selected" value="32pt">32pt</option>
+<option selected="selected" value="48pt">48pt</option>
+<option selected="selected" value="64pt">64pt</option>
+<option selected="selected" value="80pt">80pt</option>
+<option selected="selected" value="100pt">100pt</option>
+</select>
+<input id="text" class="text_tool" type="text" title="Change text contents" size="60" disabled/>
 </div>
 </div>
 
